--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Test Web Page</title>
+	<title>Test Web Page</title> 
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<header>
+		
+		<img src="./img/logo.svg" alt="Логотип">
+		<p>BuhOne</p>
+
+		<ul>
+			<li>
+				<a href="tel:81112223344">
+					<img src="./img/phone.svg" alt="Трубка">
+					<span>8 (111) 222-33-44</span>
+				</a>
+			</li>
+			<li>
+				<img src="./img/watch.svg" alt="Часы">
+				<span>Пн-Пт 10:00-18:00</span>
+			</li>
+			<li>
+				<a href="mailto:order@buhone.ru">
+					<img src="./img/blue_envelop.svg" alt="Конверт">
+					<span>order@buhone.ru</span>
+				</a>
+			</li>
+			<li>
+				<img src="./img/location.svg" alt="Местоположение">
+				<span>Невский пр. 130</span>
+			</li>
+		</ul>
+
+		<nav>
+			<ul>
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Услуги</a></li>
+				<li><a href="#">Кейсы</a></li>
+				<li><a href="#">О компании</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+		</nav>
+
+	</header>
 </body>
 </html>
