--- a/index.html
+++ b/index.html
@@ -46,5 +46,28 @@
 		</nav>
 
 	</header>
+
+	<main>
+
+		<section>
+			<h1>Бухгалтерские услуги в Санкт-Петербурге</h1>
+			<div><a href="*">Наша презентация</a></div>
+		</section>
+
+		<section>
+			<h2>Наши услуги</h2>
+			<p>Мы специализируемся</p>
+
+			<ul>
+				<li><a href="*"><h3>Бухгалтерское обслуживание</h3></a></li>
+				<li><a href="*"><h3>Бухгалтерское обслуживание</h3></a></li>
+				<li><a href="*"><h3>Бухгалтерское обслуживание</h3></a></li>
+				<li><a href="*"><h3>Бухгалтерское обслуживание</h3></a></li>
+				<li><a href="*"><h3>Бухгалтерское обслуживание</h3></a></li>
+				<li><a href="*"><h3>Бухгалтерское обслуживание</h3></a></li>
+			</ul>
+		</section>
+
+	</main>
 </body>
 </html>
