--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		
+
 		<img src="./img/logo.svg" alt="Логотип">
 		<p>BuhOne</p>
 
@@ -67,6 +67,147 @@
 				<li><a href="*"><h3>Бухгалтерское обслуживание</h3></a></li>
 			</ul>
 		</section>
+
+		<section>
+
+			<h2>О нас</h2>
+			<p>Компания<br>ИвановПром</p>
+			<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
+
+			<ul>
+				<li>
+					<p>90</p>
+					<p>Завершено крупных сделок</p>
+					<a href="*">Все кейсы</a>
+				</li>
+				<li>
+					<p>90</p>
+					<p>Завершено крупных сделок</p>
+					<a href="*">Все кейсы</a>
+				</li>
+				<li>
+					<p>90</p>
+					<p>Завершено крупных сделок</p>
+					<a href="*">Все кейсы</a>
+				</li>
+				<li>
+					<p>90</p>
+					<p>Завершено крупных сделок</p>
+					<a href="*">Все кейсы</a>
+				</li>
+			</ul>
+
+		</section>
+
+		<section>
+
+			<h2>Наши клиенты</h2>
+			<p>С нами работают</p>
+
+			<ul>
+				<li><img src="./img/microsoft-logo.png" alt="Microsoft Logo"></li>
+				<li><img src="./img/microsoft-logo.png" alt="Microsoft Logo"></li>
+				<li><img src="./img/microsoft-logo.png" alt="Microsoft Logo"></li>
+				<li><img src="./img/microsoft-logo.png" alt="Microsoft Logo"></li>
+				<li><img src="./img/microsoft-logo.png" alt="Microsoft Logo"></li>
+				<li><img src="./img/microsoft-logo.png" alt="Microsoft Logo"></li>
+				<li><img src="./img/microsoft-logo.png" alt="Microsoft Logo"></li>
+				<li><img src="./img/microsoft-logo.png" alt="Microsoft Logo"></li>
+			</ul>
+			
+			</section>
+
+			<section>
+
+				<h2>Отзывы</h2>
+				<p>Ваши благодарности</p>
+ 
+				<button type="button">Оставить отзыв</button>
+
+				<ul>
+					<li>
+						<blockquote>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. </blockquote>
+						<img src="./img/woman-pic.png" alt="Екатерина Иванова">
+						<p>Екатерина Иванова</p>
+						<p>Директор ООО “Раз-два”</p>
+					</li>
+					<li>
+						<blockquote>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. </blockquote>
+						<img src="./img/woman-pic.png" alt="Екатерина Иванова">
+						<p>Екатерина Иванова</p>
+						<p>Директор ООО “Раз-два”</p>
+					</li>
+					<li>
+						<blockquote>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. </blockquote>
+						<img src="./img/woman-pic.png" alt="Екатерина Иванова">
+						<p>Екатерина Иванова</p>
+						<p>Директор ООО “Раз-два”</p>
+					</li>
+					<li>
+						<blockquote>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. </blockquote>
+						<img src="./img/woman-pic.png" alt="Екатерина Иванова">
+						<p>Екатерина Иванова</p>
+						<p>Директор ООО “Раз-два”</p>
+					</li>
+				</ul>
+
+				<ul>
+					<li><button type="button"></button></li>
+					<li><button type="button"></button></li>
+					<li><button type="button"></button></li>
+					<li><button type="button"></button></li>
+				</ul>
+
+				<button type="button" disabled><img src="./img/arrow_left.svg" alt="Стрелка влево"></button>
+				<button type="button"><img src="./img/arrow_right.svg" alt="Стрелка вправо"></button>
+
+			</section>
+			
+			<section>
+
+				<h2>Наши преимущетсва</h2>
+				<p>Мы предлагаем</p>
+
+				<ul>
+					<li><img src="./img/Advantages_1.png" alt="Значок качества"></li>
+					<li><img src="./img/Advantages_2.png" alt="Значок оперативности"></li>
+					<li><img src="./img/Advantages_3.png" alt="Значок экспертности"></li>
+				</ul>
+
+			</section>
+
+			<footer>
+
+				<div>
+					<h2></h2>
+					<p></p>
+					<ul>
+						<li>
+							<a href="tel:81112223344">
+								<img src="./img/white-phone.svg" alt="Трубка">
+								<span>+7 (111) 222-33-44</span>
+							</a>
+						</li>
+						<li>
+							<a href="mailto:order@buhone.ru">
+								<img src="./img/Envelop.svg" alt="Конверт">
+								<span>order@buhone.ru</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+
+				<div>Тут будет форма</div>
+
+				<div>
+					<p>2019 (с) Все права защищены. БухОне.ру</p>
+					<p>Разработано: BuhOne</p>
+				</div>
+
+			</footer>
+
+			<!-- попап -->
+			<div></div>
 
 	</main>
 </body>
